--- a/week1.html
+++ b/week1.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>welcome to bookstagram website</title>
+<title>welcome to instastagram website</title>
 <script type="text/javascript"></script>
 </head>
 <body>
